# YuGiOh-

./: BUILD.md  CMakeLists.txt  Makefile  README.md  build.bat  build_vs.bat
docs/: architecture.md  development.md
include/: Card.h  CardDatabase.h  Deck.h  Game.h  Player.h
src/: Card.cpp  CardDatabase.cpp  Deck.cpp  Game.cpp  Player.cpp  main.cpp
tests/: test_main.cpp
